RESOLVED FIXED72416
Leaks seen in MemoryPressureHandlerMac.mm on Leaks bot
https://bugs.webkit.org/show_bug.cgi?id=72416
Summary Leaks seen in MemoryPressureHandlerMac.mm on Leaks bot
Adam Roben (:aroben)
Reported 2011-11-15 14:10:55 PST
http://build.webkit.org/LeaksViewer/?url=%2Fresults%2FLion%20Intel%20Leaks%2Fr100308%20%28129%29%2F shows that _cache_event_source and _timer_event_source in MemoryPressureHandlerMac.mm are being leaked. It looks like MemoryPressureHandler::uninstall is canceling but not releasing _cache_event_source. It looks like MemoryPressureHandler::holdOff will overwrite _timer_event_source without canceling or releasing it. (Perhaps uninstall should be doing this?)
Attachments
Proposed Patch (2.77 KB, patch)
2011-11-17 13:58 PST, Michael Saboff
ggaren: review+
Radar WebKit Bug Importer
Comment 1 2011-11-15 14:11:09 PST
Michael Saboff
Comment 2 2011-11-17 13:58:48 PST
Created attachment 115670 [details] Proposed Patch
Geoffrey Garen
Comment 3 2011-11-17 14:00:46 PST
Comment on attachment 115670 [details] Proposed Patch r=me
Michael Saboff
Comment 4 2011-11-17 14:49:46 PST
Note You need to log in before you can comment on or make changes to this bug.