Leaks seen in MemoryPressureHandlerMac.mm on Leaks bot https://bugs.webkit.org/show_bug.cgi?id=72416

Added code to release _cache_event_source and _timer_event_source
after they are canceled.  Also added defensive code to
clean up the _timer_event_source in uninstall().

Reviewed by Geoffrey Garen.

No new tests, fixing leaks caught by leaks bot.

* platform/mac/MemoryPressureHandlerMac.mm:
(WebCore::MemoryPressureHandler::uninstall):
(WebCore::MemoryPressureHandler::holdOff):


Canonical link: https://commits.webkit.org/89182@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@100681 268f45cc-cd09-0410-ab3c-d52691b4dbfc